fix intro anim on mobile

--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,10 +1,7 @@
 @import '../layouts/variables.css';
 
 .projects {
-  opacity: 0;
-  transition: all 300ms 600ms;
-
-  &.visible {
-    opacity: 1;
-  }
+  position: relative;
+  z-index: var(--z-index-projects);
+  box-shadow: 0px 4px 30px black;
 }
